# django-formtools

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: release.yml  test.yml
.tx/: config
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat  preview.rst  releases.rst  wizard.rst
formtools/: __init__.py  apps.py  preview.py  utils.py
formtools/locale/ar/LC_MESSAGES/: django.mo  django.po
formtools/locale/br/LC_MESSAGES/: django.mo  django.po
formtools/locale/da/LC_MESSAGES/: django.mo  django.po
formtools/locale/el/LC_MESSAGES/: django.mo  django.po
formtools/locale/en/LC_MESSAGES/: django.mo  django.po
formtools/locale/eo/LC_MESSAGES/: django.mo  django.po
formtools/locale/es/LC_MESSAGES/: django.mo  django.po
formtools/locale/es_AR/LC_MESSAGES/: django.mo  django.po
formtools/locale/es_MX/LC_MESSAGES/: django.mo  django.po
formtools/locale/et/LC_MESSAGES/: django.mo  django.po
formtools/locale/eu/LC_MESSAGES/: django.mo  django.po
formtools/locale/fa/LC_MESSAGES/: django.mo  django.po
formtools/locale/fi/LC_MESSAGES/: django.mo  django.po
formtools/locale/ga/LC_MESSAGES/: django.mo  django.po
formtools/locale/gl/LC_MESSAGES/: django.mo  django.po
formtools/locale/hr/LC_MESSAGES/: django.mo  django.po
formtools/locale/hu/LC_MESSAGES/: django.mo  django.po
formtools/locale/id/LC_MESSAGES/: django.mo  django.po
formtools/locale/is/LC_MESSAGES/: django.mo  django.po
formtools/locale/ja/LC_MESSAGES/: django.mo  django.po
formtools/locale/ko/LC_MESSAGES/: django.mo  django.po
formtools/templates/formtools/: form.html  preview.html
formtools/wizard/: forms.py  views.py
formtools/wizard/storage/: __init__.py  base.py  cookie.py  session.py
tests/: forms.py  requirements.txt  settings.py  tests.py  urls.py
tests/templates/forms/: wizard.html
tests/wizard/: storage.py  test_basestorage.py  test_cookiestorage.py  test_forms.py  test_loadstorage.py  test_sessionstorage.py
tests/wizard/namedwizardtests/: forms.py  tests.py  urls.py
tests/wizard/wizardtests/: forms.py  models.py  tests.py  urls.py
(+37 files in other folders)
